8152817: Locale data loading fails silently when running with a security manager
Reviewed-by: mchung, alanb